각 아이콘마다 화면 이동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         </activity>
 
         <activity android:name=".GreetingActivity"/>
+        <activity android:name=".HistoryActivity"/>
+        <activity android:name=".VisionActivity"/>
+        <activity android:name=".FaithActivity"/>
+        <activity android:name=".ProfilesActivity"/>
+        <activity android:name=".TimetableActivity"/>
+        <activity android:name=".MapActivity"/>
     </application>
 
 </manifest>
