오말찬 화면 이동까지

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ProfilesActivity"/>
         <activity android:name=".TimetableActivity"/>
         <activity android:name=".MapActivity"/>
+        <activity android:name=".MannaActivity"/>
     </application>
 
 </manifest>
