말씀탭에서 아이콘 클릭시 화면 이동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
         <activity android:name=".TimetableActivity"/>
         <activity android:name=".MapActivity"/>
         <activity android:name=".MannaActivity"/>
+        <activity android:name=".SundayActivity"/>
+        <activity android:name=".WednesdayActivity"/>
+        <activity android:name=".YouthActivity"/>
+        <activity android:name=".MidhighActivity"/>
+        <activity android:name=".ChildrenActivity"/>
     </application>
 
 </manifest>
