--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon"
+        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kbbbc_20211227">
         <activity android:name=".MainActivity" android:exported="false"/>
@@ -32,5 +33,6 @@
         <activity android:name=".MidhighActivity"/>
         <activity android:name=".ChildrenActivity"/>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
